--- a/tsconfig.tsd.json
+++ b/tsconfig.tsd.json
@@ -20,6 +20,7 @@
 		"noEmitOnError": true,
 		"forceConsistentCasingInFileNames": true,
 		"esModuleInterop": true,
+		"skipLibCheck": true
 	},
 	"exclude": [
 		"node_modules",
